# AutGuardRails

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: agent-assignment.md  architecture.md  parallel-implementation-plan.md  phase3-implementation-plan.md  policies.md  practical-workflow.md  product.md  safety.md  windows-setup.md
policies/: example-dry-run.yaml
scripts/: make.ps1
src/: __init__.py
src/guardrails/: __init__.py  audit_store.py  executor_iam.py  models.py  notifier_slack.py  policy_engine.py
src/guardrails/handlers/: __init__.py  approval_webhook.py  budgets_event.py  ttl_cleanup.py
tests/: __init__.py
tests/integration/: __init__.py  test_e2e_phase1.py  test_e2e_phase2.py  test_e2e_phase3.py
tests/unit/: __init__.py  test_approval_webhook.py  test_audit_store.py  test_budgets_event.py  test_executor_iam.py  test_models.py  test_notifier_slack.py  test_policy_engine.py  test_ttl_cleanup.py
